# ovos-skill-application-launcher

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  version.py
.github/workflows/: build_tests.yml  license_tests.yml  publish_stable.yml  pull_request_lint.yml  release_please.yml  release_workflow.yml  sync_tx.yml
locale/ca-es/: already_running.dialog  close.intent  confirm_launch.dialog  confirm_switch.dialog  launch.intent
locale/da/: confirm_switch.dialog  launch.intent
locale/de-de/: close.intent  confirm_launch.dialog  confirm_switch.dialog  launch.intent  skill.json
locale/en-us/: already_running.dialog  close.intent  confirm_launch.dialog  launch.intent  skill.json
locale/eu/: launch.intent
locale/gl-es/: already_running.dialog  confirm_launch.dialog  launch.intent
locale/it-it/: close.intent  launch.intent
locale/nl-nl/: already_running.dialog  close.intent  confirm_launch.dialog  confirm_switch.dialog  launch.intent  skill.json
ovos_skill_application_launcher.egg-info/: SOURCES.txt  top_level.txt
scripts/: example_usage.py
skill_mac_application_launcher/: __init__.py  macos_controller.py  py.typed
skill_mac_application_launcher/locale/ca-es/: close.intent  launch.intent  skill.json
skill_mac_application_launcher/locale/da/: already_running.dialog  close.intent  confirm_launch.dialog  skill.json
skill_mac_application_launcher/locale/de-de/: already_running.dialog  launch.intent
skill_mac_application_launcher/locale/en-us/: already_running.dialog  close.intent  confirm_switch.dialog
skill_mac_application_launcher/locale/gl-es/: close.intent  confirm_switch.dialog
tests/: test_macos.py  test_macos_controller.py
translations/ca-es/: dialogs.json  intents.json
translations/da/: dialogs.json  intents.json
translations/de-de/: dialogs.json  intents.json
translations/en-us/: dialogs.json  intents.json
translations/eu/: intents.json
translations/gl-es/: dialogs.json  intents.json
translations/it-it/: intents.json
translations/nl-nl/: dialogs.json  intents.json
translations/pt-pt/: intents.json
(+3 files in other folders)
